# fastapi-learn

./: .env  .gitignore  main.py  pyproject.toml
api/routes/: user.py
core/: database.py  setting.py
dependencies/: page.py
schema/: user.py  user2.py  user3.py
