[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyrefly>=1.1.1",
    "ruff>=0.15.21",
]
