[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "ty>=0.0.59",
]
